src/test/resources/errors/missing_statement.jd
evidence Su1 is "Evidence 1"
strategy St1 is "Strategy 1"
Su1 supports St1
//no justification statement